# surveillance-rs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: cli.rs  config.rs  main.rs  streams.rs
